--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/next-redux-wrapper": "^3.0.0",
+    "@types/react-redux": "^7.1.22",
+    "axios": "^0.25.0",
     "next": "12.0.8",
+    "next-auth": "^4.1.2",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "17.0.12",
