--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/react-redux": "^7.1.22",
     "axios": "^0.25.0",
+    "formik": "^2.2.9",
     "next": "12.0.8",
     "next-auth": "^4.1.2",
     "next-redux-wrapper": "^7.0.5",
+    "query-string": "^7.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.2.0",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "sass": "^1.49.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.12",
