--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "client",
-  "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
+  "license": "ISC",
   "dependencies": {
+    "@types/cookie": "^0.4.1",
+    "@types/js-cookie": "^3.0.1",
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/react-redux": "^7.1.22",
     "axios": "^0.25.0",
+    "express": "^4.17.2",
     "formik": "^2.2.9",
+    "http-proxy-middleware": "^2.0.3",
+    "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "next": "12.0.8",
     "next-auth": "^4.1.2",
     "next-redux-wrapper": "^7.0.5",
@@ -33,5 +39,6 @@
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "typescript": "4.5.5"
-  }
+  },
+  "proxy": "http://localhost:5000/"
 }
